fix: z-indexes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,7 @@ header {
   bottom: unset;
   padding: var(--spacing-xs);
   background-color: var(--color-background);
-  z-index: 5;
+  z-index: 4;
 }
 
 header .header {
