--- a/utils/modal/modal.css
+++ b/utils/modal/modal.css
@@ -5,13 +5,13 @@
     width: 100vw;
     height: 100vh;
     background-color: #0B21E330;
-    z-index: 9;
+    z-index: 5;
     display: none;
 }
 
 .modal .modal-container {
     position: fixed;
-    z-index: 10;
+    z-index: 6;
     top: 50%;
     left: 50%;
     transform:translate(-50%,-50%);
@@ -61,7 +61,7 @@
 @media (width >= 1025px) {
     .modal .modal-container {
         position: fixed;
-        z-index: 10;
+        z-index: 6;
         top: 50%;
         left: 50%;
         transform:translate(-50%,-50%);
@@ -69,7 +69,6 @@
         max-height: 80vh;
         min-width: 600px;
         max-width: 70vw;
-        overflow-y: auto;
         overflow: auto;
         background-color: var(--white);
         border: 2px solid var(--blue);
